# vexy-lines-run

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  PLAN.md  README.md  WORK.md  build.sh  install.sh  mkdocs.yml  publish.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml
.omc/state/: subagent-tracking.json  ultrawork-state.json
docs/: 404.html  index.html
docs/api-reference/: index.html
docs/changelog/: index.html
docs/examples/: index.html
docs/gui-guide/: index.html
docs/gui-tech/: index.html
docs/installation/: index.html
docs/search/: search_index.json
issues/: 501.md
overrides/: main.html
src/vexy_lines_run/: CLAUDE.md  __init__.py  __main__.py  __version__.py  app.py  handlers.py  helpers.py  layout.py  processing.py  video.py  widgets.py
src_docs/: api-reference.md  changelog.md  examples.md  gui-guide.md  gui-tech.md  index.md  installation.md
tests/: CLAUDE.md  __init__.py  conftest.py  test_app.py  test_handlers.py  test_processing.py  test_ui_issue_501.py  test_ui_properties.py  test_ui_verification.py  test_video.py  test_widgets.py
